Revert "Fix horizontal overflow in iterations list (#2585)"
This reverts commit b98218b8ef82f6322446416fc19d51792de7a5ac.

--- a/app/css/components/iterations-footer.css
+++ b/app/css/components/iterations-footer.css
@@ -12,7 +12,6 @@
     & .iterations {
         @apply flex flex-grow items-center;
         @apply mr-24;
-        overflow-x: auto;
 
         & .iteration {
             height: 32px;
